--- a/Classes/ImagePickerViewController.xib
+++ b/Classes/ImagePickerViewController.xib
@@ -3,13 +3,15 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment version="2080" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImagePickerViewController">
             <connections>
                 <outlet property="currentImageView" destination="4" id="7"/>
+                <outlet property="customBtn" destination="5" id="Iwa-zA-Px5"/>
+                <outlet property="defaultBtn" destination="6" id="Ta0-L8-CHv"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
